--- a/src/views/catalogue.ejs
+++ b/src/views/catalogue.ejs
@@ -5,13 +5,26 @@
 
         <div class="articles only-display-3-articles" id="articles-list">
             <article>
-                <img src="../images/coffees/295432730.png" alt="Sumatra Mandheling" />
-                <div>
-                    <h2>Sumatra Mandheling 1</h2>
-                    <p>Origine Indonésie</p>
-                    <p>25,99 €/kg</p>
-                    <a class="button-outline" href="#">Voir le détail</a>
-                </div>
+                <% if (locals.cafe && Array.isArray(locals.cafe) && locals.cafe.length> 0) { %>
+                    <% for (const cafe of locals.cafe) { %>
+                        <img src="<%= cafe.reference %>" alt="Sumatra Mandheling" />
+                        <div>
+
+                            <h2>
+                                <%= cafe.id %>
+                            </h2>
+                            <p>
+                                <%= cafe.id_origine %>
+                            </p>
+                            <p>
+                                <%= cafe.prix_kg %>
+                            </p>
+                            <a class="button-outline" href="#">Voir le détail</a>
+                            <% } %>
+                                <% } else { %>
+                                    <li>Pas de produit disponibles</li>
+                                    <% } %>
+                        </div>
             </article>
 
             <article>
