--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -6,9 +6,9 @@
             <p>oCoffee est un détaillant de café et de produits associés à la consommation du café basé dans la ville de
                 Hauts-de-Cloques. Nous importons nos produits directement des producteurs, et nous les sélectionnons
                 selon des critères exigeants de qualité. oCoffee est reconnu à l’échelle départementale.</p>
-            <a class="button" href="#">Découvrir notre catalogue</a>
+            <a class="button" href="/catalogue">Découvrir notre catalogue</a>
         </div>
-        <img src="../../../images/about.jpg" alt="Selection de nos meilleurs cafés oCoffee">
+        <img src="../images/about.jpg" alt="Selection de nos meilleurs cafés oCoffee">
     </section>
 
     <section id="latest-products">
@@ -16,18 +16,22 @@
 
         <ul>
             <li>
-                <article>
-                    <img src="../../../images/coffees/100955890.png" alt="Ethiopian Yirgacheffe">
-                    <div>
-                        <h3>Ethiopian Yirgacheffe</h3>
-                        <a class="button-outline" href="#">Voir le détail</a>
-                    </div>
-                </article>
+                <% cafe.forEach(cafes=> { %>
+                    <article>
+                        <img src="<%= cafe.reference %>" alt="<%= cafe.nom %>">
+                        <div>
+                            <h3>
+                                <%= cafe.nom %>
+                            </h3>
+                            <a class="button-outline" href="#">Voir le détail</a>
+                        </div>
+                    </article>
+                    <% }); %>
             </li>
 
             <li>
                 <article>
-                    <img src="../../../images/coffees/100955890.png" alt="Ethiopian Yirgacheffe">
+                    <img src="../images/coffees/100955890.png" alt="Ethiopian Yirgacheffe">
                     <div>
                         <h3>Ethiopian Yirgacheffe</h3>
                         <a class="button-outline" href="#">Voir le détail</a>
