--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -12,22 +12,22 @@
     <title>oCoffee</title>
 
     <!-- Common styles -->
-    <link rel="stylesheet" href="../../../public/css/reset.css">
-    <link rel="stylesheet" href="../../../public/css/base.css">
-    <link rel="stylesheet" href="../../../public/css/common.css">
-    <link rel="stylesheet" href="../../../public/css/layout.css">
+    <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" href="../css/base.css">
+    <link rel="stylesheet" href="../css/common.css">
+    <link rel="stylesheet" href="../css/layout.css">
 
     <!-- Common scripts -->
-    <script defer src="../../../public/js/header.js"></script>
+    <script defer src="../js/header.js"></script>
 
     <!-- Style -->
-    <link rel="stylesheet" href="../../../public/css/home.css">
+    <link rel="stylesheet" href="../css/home.css">
 </head>
 
 <body>
     <header>
-        <a href="#">
-            <img src="../../../public/images/logo.svg" alt="logo oCoffee">
+        <a href="/">
+            <img src="../images/logo.svg" alt="logo oCoffee">
             oCoffee
         </a>
 
