--- a/public/css/produit.css
+++ b/public/css/produit.css
@@ -1,4 +1,4 @@
-#catalog h1 {
+#produit h1 {
   padding: 4.5rem;
   background-image: url(../images/coffees/256505890.png);
   border-radius: 0.5rem;
@@ -7,30 +7,30 @@
   font-size: 2rem;
 }
 
-#catalog .articles {
-  display: grid;
+#produit .articles {
+  /* display: grid;
   grid-template-columns: repeat(
     auto-fill,
     minmax(20rem, 1fr)
-  ); /* https://css-tricks.com/a-responsive-grid-layout-with-no-media-queries/ */
+  ); https://css-tricks.com/a-responsive-grid-layout-with-no-media-queries/ */
   gap: 2rem;
 
   margin-top: 5rem;
 }
 
 /* Bonus : hide all articles after the 3rd one until the user clicks the button to display more */
-#catalog .only-display-1-article article:nth-child(n + 4) {
+#produit .only-display-1-article article:nth-child(n + 4) {
   display: none;
 }
 
-#catalog article {
+#produit article {
   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
     rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
     rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
   border-radius: 0.5rem;
 }
 
-#catalog article img {
+#produit article img {
   height: 12rem;
   width: 100%;
   object-fit: cover;
@@ -38,19 +38,19 @@
   border-top-right-radius: 0.5rem;
 }
 
-#catalog article div {
+#produit article div {
   padding: 2rem;
   text-align: center;
 }
 
-#catalog article h2 {
+#produit article h2 {
   margin-bottom: 1rem;
 }
 
-#catalog article a {
+#produit article a {
   margin-top: 1rem;
 }
 
-#catalog button {
+#produit button {
   margin: 2rem auto 0 auto;
 }
