--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -15,40 +15,20 @@
         <h2>Nouveautés</h2>
 
         <ul>
-            <li>
-                <% cafe.forEach(cafes=> { %>
+            <% cafe.forEach(cafe=> { %>
+                <li>
                     <article>
-                        <img src="<%= cafe.reference %>" alt="<%= cafe.nom %>">
+                        <img src="../images/coffees/<%= cafe.reference %>.png" alt="<%= cafe.nom %>">
                         <div>
                             <h3>
                                 <%= cafe.nom %>
                             </h3>
-                            <a class="button-outline" href="#">Voir le détail</a>
+                            <a class="button-outline" href="/catalogue/<%= cafe.id %>">Voir le détail</a>
                         </div>
                     </article>
-                    <% }); %>
-            </li>
 
-            <li>
-                <article>
-                    <img src="../images/coffees/100955890.png" alt="Ethiopian Yirgacheffe">
-                    <div>
-                        <h3>Ethiopian Yirgacheffe</h3>
-                        <a class="button-outline" href="#">Voir le détail</a>
-                    </div>
-                </article>
-            </li>
-
-            <li>
-                <article>
-                    <img src="../../../images/coffees/100955890.png" alt="Ethiopian Yirgacheffe">
-                    <div>
-                        <h3>Ethiopian Yirgacheffe</h3>
-                        <a class="button-outline" href="#">Voir le détail</a>
-                    </div>
-                </article>
-            </li>
-
+                </li>
+                <% }); %>
         </ul>
     </section>
 
