--- a/src/views/catalogue.ejs
+++ b/src/views/catalogue.ejs
@@ -1,4 +1,4 @@
-<%- include('partials/headerC') %>
+<%- include('partials/header') %>
 
     <section id="catalog">
         <h1>Notre catalogue</h1>
@@ -27,14 +27,8 @@
                         <% } else { %>
                             <p>Pas de produit disponibles</p>
                             <% } %>
-
-
-
         </div>
 
-        <button class="button" id="see-all-products-button">
-            Voir tous les produits
-        </button>
     </section>
 
     <%- include('partials/footer') %>
