--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -21,7 +21,7 @@
     <script defer src="../js/header.js"></script>
 
     <!-- Style -->
-    <link rel="stylesheet" href="../css/home.css">
+    <link rel="stylesheet" href="../css/<%= style || 'style-par-defaut' %>.css">
 </head>
 
 <body>
@@ -46,8 +46,8 @@
 
             <ul>
                 <li><a href="/">Accueil</a></li>
+                <li><a href="/histoire">Notre histoire</a></li>
                 <li><a href="/catalogue">Catalogue</a></li>
-                <li><a href="#">Boutique</a></li>
             </ul>
         </nav>
     </header>
